<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">The Hinju App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_tokens">Tokens</string>
    <string name="title_notifications">Notifications</string>

    <string name="intro_text">Discover a new era of convenient <font style='bold' color='#984061'>gas station transactions</font></string>

    <!--  Shared Preferences  -->
    <string name="session_preference">SESSION_SHARED_PREFERENCE</string>
    <string name="sp_user_id">SP_USER_ID</string>
    <string name="sp_wallet">SP_WALLET</string>
    <string name="sp_date_created">SP_DATE_CREATED</string>
    <string name="sp_new_user">SP_NEW_USER</string>
    <string name="sp_min_fuel_quantity">SP_MIN_FUEL_QUANTITY</string>
    <string name="sp_max_fuel_quantity">SP_MAX_FUEL_QUANTITY</string>
    <string name="sp_tax_per_litre">SP_TAX_PER_LITRE</string>
    <string name="sp_service_charge_per_litre">SP_SERVICE_CHARGE_PER_LITRE</string>
    <string name="sp_default_wallet_balance">SP_DEFAULT_WALLET_BALANCE</string>
    <string name="sp_diesel">SP_DIESEL</string>
    <string name="sp_petrol">SP_PETROL</string>
    <string name="sp_user_tokens_json_string">SP_USER_TOKENS_JSON_STRING</string>

    <!--  Top App Bar Menu  -->
    <string name="app_bar_title_notifications">Notifications</string>
    <string name="app_bar_title_settings">Settings</string>
    <string name="app_bar_title_home"> </string>

    <!--  Main Activity -->
    <string name="x">Notifications</string>

    <!--  Home Fragment  -->
    <string name="fuel_quantity_helper_text">%1$d – %2$d litres max</string>
    <string name="fuel_quantity_helper_default_text">1 – 10 litres max</string>

    <!--  Tokens Fragment  -->
    <string name="no_tokens_available_text">No tokens available yet</string>

    <!-- Confirm Order Activity  -->
    <string name="title_activity_confirm_order">Confirm Order</string>
    <string name="petrol_string_text">Petrol</string>
    <string name="diesel_string_text">Diesel</string>
    <string name="ps_fuel_type_text">Petrol</string>
    <string name="ps_fuel_quantity_text">%1$d litres</string>
    <string name="ps_fuel_quantity_default_text">2 litres</string>
    <string name="ps_fuel_cost_text">%1$s/=</string>
    <string name="ps_fuel_cost_default_text">6,600.00/=</string>
    <string name="ps_fuel_service_charge_text">%1$s/=</string>
    <string name="ps_fuel_service_charge_default_text">200.00/=</string>
    <string name="ps_fuel_tax_text">%1$s/=</string>
    <string name="ps_fuel_tax_default_text">80.00/=</string>
    <string name="ps_fuel_total_cost_text">%1$s/=</string>
    <string name="ps_fuel_total_cost_default_text">6,800.00/=</string>
    <string name="continue_to_pay_button_text">Continue to pay Tsh %1$s/=</string>
    <string name="continue_to_pay_button_default_text">Continue to pay Tsh 6,880.00/=</string>

    <!-- Wallet Check Out Activity  -->
    <string name="title_activity_wallet_check_out">Wallet Checkout</string>
    <string name="wallet_balance_text">Tsh %1$s/=</string>
    <string name="wallet_balance_default_text">Tsh 190,000/=</string>
    <string name="process_payment_txt1">Process Payment of TSh %1$s/=</string>
    <string name="process_payment_default_txt1">Process Payment of Tsh 6,800.00/=</string>
    <string name="process_payment_txt2">Go to Home</string>
    <string name="card_token_text">500290</string>
    <string name="card_used_chip_text">used</string>
    <string name="card_not_used_chip_text">not used</string>
    <string name="card_fuel_text">%1$s - %2$d %3$s</string>
    <string name="card_fuel_default_text">Petrol - 4 litres</string>
    <string name="card_cost_text">Tsh %1$s/=</string>
    <string name="card_cost_default_text">Tsh 59,000/=</string>
    <string name="card_date_created_text">Created %1$s</string>
    <string name="card_date_created_default_text">Created Yesterday, 12:20 PM</string>
    <string name="card_date_used_text">Used %1$s</string>
    <string name="card_date_used_default_text">Used 3 min. ago, 10:15 AM</string>

    <!-- PayPal Check Out Activity  -->
    <string name="title_activity_paypal_check_out">Paypal Checkout</string>

    <!-- Credit Card Check Out Activity  -->
    <string name="title_activity_credit_card_check_out">Credit Card Checkout</string>

    <!-- Google Pay Check Out Activity  -->
    <string name="title_activity_google_pay_check_out">Google Pay Checkout</string>

    <!-- Wallet activity -->
    <string name="title_activity_google_wallet">GoogleWalletActivity</string>
    <string name="add_to_google_wallet_button_content_description">Add to Google Wallet</string>
    <string name="sample_pass" translatable="false">Sample Pass</string>
    <string name="google_wallet_status_unavailable" translatable="false">Unfortunately, Google
        Wallet is not available on this phone.
    </string>
    <string name="add_google_wallet_success" translatable="false">The pass was added successfully!
    </string>
    <string name="add_google_wallet_cancelled" translatable="false">The user cancelled adding the
        pass to Google Wallet.
    </string>
    <string name="add_google_wallet_unknown_error" translatable="false">An unknown error occurred
        when adding pass to Google Wallet.
    </string>

    <!-- Checkout activity -->
    <string name="title_activity_google_pay">GooglePayActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="internet_connection_unavailable_text">Internet connection is required</string>

</resources>