<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tokenCardTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/cardTokenTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:letterSpacing="0.5"
                    android:text="@string/card_token_text"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="?colorPrimary"
                    android:textSize="25sp" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/cardChip"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:checked="true"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/card_not_used_chip_text"
                    app:checkedIconEnabled="false"
                    app:ensureMinTouchTargetSize="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tokenCardBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_local_gas_station_black_24dp"
                            app:tint="?colorPrimary" />

                        <TextView
                            android:id="@+id/cardFuelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:text="@string/card_fuel_default_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_money_black_24dp"
                            app:tint="?colorPrimary" />

                        <TextView
                            android:id="@+id/cardCostTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:text="@string/card_cost_default_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_date_range_black_24dp"
                            app:tint="?colorPrimary" />

                        <TextView
                            android:id="@+id/cardDateCreatedTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:text="@string/card_date_created_default_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dateUsedLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_date_range_black_24dp"
                            app:tint="?colorPrimary" />

                        <TextView
                            android:id="@+id/cardDateUsedTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:text="@string/card_date_used_default_text" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/copyTokenIconButton"
                        style="?attr/materialIconButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_content_copy_black_24_dp" />

                    <Button
                        android:id="@+id/sendTokenIconButton"
                        style="?attr/materialIconButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:icon="@drawable/ic_send_black_24dp" />

                    <Button
                        android:id="@+id/shareTokenIconButton"
                        style="?attr/materialIconButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_share_black_24dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>