<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.checkout.WalletCheckOutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_activity_wallet_check_out" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?actionBarSize">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linear_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient_bg">

                    <TextView
                        android:id="@+id/balance_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:text="Wallet Balance"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/wallet_balance_default_text"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/tokenCard"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/cardTokenTextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:letterSpacing="0.5"
                                android:text="@string/card_token_text"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textColor="?colorPrimary"
                                android:textSize="25sp" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.Material3.Chip.Filter"
                                android:layout_width="wrap_content"
                                android:layout_height="45dp"
                                android:checked="true"
                                android:clickable="false"
                                android:text="@string/card_not_used_chip_text"
                                app:checkedIconEnabled="false"
                                app:ensureMinTouchTargetSize="true" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/ic_local_gas_station_black_24dp"
                                app:tint="?colorPrimary" />

                            <TextView
                                android:id="@+id/cardFuelTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/card_fuel_default_text" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/ic_money_black_24dp"
                                app:tint="?colorPrimary" />

                            <TextView
                                android:id="@+id/cardCostTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/card_cost_default_text" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/ic_date_range_black_24dp"
                                app:tint="?colorPrimary" />

                            <TextView
                                android:id="@+id/cardDateCreatedTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/card_date_created_default_text" />

                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/copyTokenIconButton"
                            style="?attr/materialIconButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_content_copy_black_24_dp" />

                        <Button
                            android:id="@+id/sendTokenIconButton"
                            style="?attr/materialIconButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:icon="@drawable/ic_send_black_24dp" />

                        <Button
                            android:id="@+id/shareTokenIconButton"
                            style="?attr/materialIconButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_share_black_24dp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/process_payment_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/process_payment_default_txt1"
            android:textAlignment="center"
            android:textStyle="bold"
            app:cornerRadius="8dp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>